# ML-predict-diamond-prices

./: .dockerignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
notebooks/: EDA.ipynb  Model Training.ipynb
src/diamond_price_prediction/: exception.py  utils.py
src/diamond_price_prediction/backend/: application.py  dockerfile
src/diamond_price_prediction/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/diamond_price_prediction/frontend/: dashboard.py  dockerfile
src/diamond_price_prediction/pipelines/: prediction_pipeline.py  training_pipeline.py
