[tool.poetry]
name = "diamond-price-prediction"
version = "0.1.0"
description = ""
authors = ["Surajit Das <dsurajitd@gmail.com>"]
readme = "README.md"
packages = [{include = "diamond_price_prediction", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
